Extracted new menuItem to html file

--- a/src/main/resources/templates/fragments/rootLayout.html
+++ b/src/main/resources/templates/fragments/rootLayout.html
@@ -32,38 +32,10 @@
                 <div id="sidebar-container">
                     <div class="sidebar-text sidebar-title">Weight Reductor</div>
                     <div class="sidebar-item-container">
-                            <a th:href="@{/}" class="sidebar-text sidebar-item"
-                               th:classappend="${'home'==activeMenuItem ? 'sidebar-item-active' : ''}">
-                            <span th:class="'glyphicon glyphicon-home'"
-                                  class="glyphicon glyphicon-home"
-                                  th:classappend="margin-right-4"
-                                  aria-hidden="true"></span>
-                                Home
-                            </a>
-                        <a th:href="@{/products}" class="sidebar-text sidebar-item"
-                           th:classappend="${'allProducts'==activeMenuItem ? 'sidebar-item-active' : ''}">
-                            <span th:class="'glyphicon glyphicon-search'"
-                                  class="glyphicon glyphicon-search"
-                                  th:classappend="margin-right-4"
-                                  aria-hidden="true"></span>
-                            All Products
-                        </a>
-                        <a th:href="@{/products/add}" class="sidebar-text sidebar-item"
-                           th:classappend="${'addProduct'==activeMenuItem ? 'sidebar-item-active' : ''}">
-                            <span th:class="'glyphicon glyphicon-plus'"
-                                  class="glyphicon glyphicon-plus"
-                                  th:classappend="margin-right-4"
-                                  aria-hidden="true"></span>
-                            Add a Product
-                        </a>
-                        <a th:href="@{/crash}" class="sidebar-text sidebar-item"
-                           th:classappend="${'crash'==activeMenuItem ? 'sidebar-item-active' : ''}">
-                            <span th:class="'glyphicon glyphicon-warning-sign'"
-                                  class="glyphicon glyphicon-warning-sign"
-                                  th:classappend="margin-right-4"
-                                  aria-hidden="true"></span>
-                            Crash
-                        </a>
+                        <a th:replace="~{fragments/menuItem ::menuItem ('Home', '/', 'home','home')}"></a>
+                        <a th:replace="~{fragments/menuItem ::menuItem ('All Products', '/products', 'allProducts', 'search')}"></a>
+                        <a th:replace="~{fragments/menuItem ::menuItem ('Add a Product', '/products/add', 'addProduct', 'plus')}"></a>
+                        <a th:replace="~{fragments/menuItem ::menuItem ('Crash', '/crash', 'crash', 'warning-sign')}"></a>
                     </div>
                 </div>
                 <div id="content-container">
