--- a/src/main/resources/templates/home/home.html
+++ b/src/main/resources/templates/home/home.html
@@ -2,9 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/rootLayout :: rootLayout (~{::body},'home')}">
     <body>
         <div>
-            <div class="col-md-3"><img class="img-responsive" src=""
-                                       style="max-height: 84px; width: 84px;"
-                                       th:src="@{/resources/images/github-cyan.svg}"/></div>
+            <div><img src=""
+                      style="max-height: 84px; width: 84px;"
+                      th:src="@{/resources/images/github-cyan.svg}"/></div>
             <h1>Weight Reductor</h1>
             <h3>New Design Home Page</h3>
         </div>
