--- a/src/main/resources/templates/products/addProduct.html
+++ b/src/main/resources/templates/products/addProduct.html
@@ -9,13 +9,12 @@
                 <input th:replace="~{fragments/inputField :: input ('Carbs', 'carbs', 'number')}"/>
                 <input th:replace="~{fragments/inputField :: input ('Fat', 'fat', 'number')}"/>
             </div>
-            <div class="form-group">
-                <div class="col-sm-offset-2 col-sm-10">
-                    <button th:with="text=${product['new']} ? 'Add Product' : 'Update Product'" class="btn btn-default"
-                            type="submit" th:text="${text}">Add Product
-                    </button>
-                </div>
-            </div>
+            <button th:with="text=${product['new']} ? 'Add Product' : 'Update Product'"
+                    type="submit"
+                    class="small blue button"
+                    th:text="${text}">
+                Add Product
+            </button>
         </form>
     </body>
 </html>
