LocalDate, weightings, set mysql as default, generating DB only from annotations

--- a/src/main/resources/templates/products/product.html
+++ b/src/main/resources/templates/products/product.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/rootLayout :: rootLayout (~{::body},'product')}">
+<html xmlns:th="http://www.thymeleaf.org" th:replace="~{fragments/rootLayout :: rootLayout (~{::body},'addProduct')}">
     <body>
         <h1>Product</h1>
         <div>Name:</div>
