--- a/src/main/resources/templates/fragments/inputField.html
+++ b/src/main/resources/templates/fragments/inputField.html
@@ -9,14 +9,12 @@
                     <div>
                         <div th:switch="${type}">
                             <input th:case="'text'" class="form-control" type="text" th:field="*{__${name}__}"/>
-                            <input th:case="'number'" class="form-control" type="number" step="any"
+                            <input th:case="'number'" class="form-control" type="number" step="0.1"
                                    th:field="*{__${name}__}"/>
-                            <input th:case="'date'" class="form-control" type="text" th:field="*{__${name}__}"
-                                   placeholder="YYYY-MM-DD" title="Enter a date in this format: YYYY-MM-DD"
-                                   pattern="(?:19|20)[0-9]{2}-(?:(?:0[1-9]|1[0-2])-(?:0[1-9]|1[0-9]|2[0-9])|(?:(?!02)(?:0[1-9]|1[0-2])-(?:30))|(?:(?:0[13578]|1[02])-31))"/>
+                            <input th:case="'date'" class="form-control" type="date" th:field="*{__${name}__}" />
                         </div>
                         <th:block th:if="${!valid}">
-                            <span class="glyphicon glyphicon-remove
+                            <span class="glyphicon glyphicon-remove"
                                   aria-hidden="true"></span>
                             <span class="help-inline" th:errors="*{__${name}__}">Error</span>
                         </th:block>
