--- a/src/main/resources/templates/fragments/rootLayout.html
+++ b/src/main/resources/templates/fragments/rootLayout.html
@@ -35,6 +35,8 @@
                         <a th:replace="~{fragments/menuItem ::menuItem ('Home', '/', 'home','home')}"></a>
                         <a th:replace="~{fragments/menuItem ::menuItem ('All Products', '/products', 'allProducts', 'search')}"></a>
                         <a th:replace="~{fragments/menuItem ::menuItem ('Add a Product', '/products/add', 'addProduct', 'plus')}"></a>
+                        <a th:replace="~{fragments/menuItem ::menuItem ('All Weighings', '/weighings', 'allWeighings', 'search')}"></a>
+                        <a th:replace="~{fragments/menuItem ::menuItem ('Add a Weighing', '/weighings/add', 'addWeighing', 'plus')}"></a>
                         <a th:replace="~{fragments/menuItem ::menuItem ('Crash', '/crash', 'crash', 'warning-sign')}"></a>
                     </div>
                 </div>
