--- a/src/main/resources/templates/fragments/rootLayout.html
+++ b/src/main/resources/templates/fragments/rootLayout.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html th:fragment="rootLayout (template, activeMenuItem)">
+<html th:fragment="rootLayout (template, pageName, activeMenuItem)">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <meta charset="utf-8"/>
@@ -8,7 +8,7 @@
 
         <link rel="shortcut icon" type="image/x-icon" th:href="@{/resources/images/favicon.png}"/>
 
-        <title>Weight Reductor New Design</title>
+        <title>WEB Weight Reductor New Design</title>
 
         <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -17,6 +17,15 @@
 
         <script type="text/javascript" th:src="@{/resources/js/utils.js}"></script>
         <link rel="stylesheet" th:href="@{/resources/css/design.css}"/>
+
+        <script th:inline="javascript">
+            /*<![CDATA[*/
+            window.onload = function() {
+                let pageName = /*[[${pageName}]]*/ '';
+                pageLoaded(pageName);
+            }
+            /*]]>*/
+        </script>
     </head>
 
     <body>
@@ -54,6 +63,7 @@
 
         <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
         <script th:src="@{/webjars/jquery-ui/jquery-ui.min.js}"></script>
+        <script src="https://canvasjs.com/assets/script/canvasjs.min.js"> </script>
 
     </body>
 
