Miraculously revealed weighings line chart

--- a/src/main/resources/templates/fragments/rootLayout.html
+++ b/src/main/resources/templates/fragments/rootLayout.html
@@ -23,6 +23,7 @@
             window.onload = function() {
                 let pageName = /*[[${pageName}]]*/ '';
                 pageLoaded(pageName);
+                loadWeighingsChart(pageName, /*[[${weighings}]]*/ '')
             }
             /*]]>*/
         </script>
