Working foreign keys meal-products

--- a/src/main/resources/templates/fragments/rootLayout.html
+++ b/src/main/resources/templates/fragments/rootLayout.html
@@ -47,6 +47,8 @@
                         <a th:replace="~{fragments/menuItem ::menuItem ('Add a Product', '/products/add', 'addProduct', 'plus')}"></a>
                         <a th:replace="~{fragments/menuItem ::menuItem ('All Weighings', '/weighings', 'allWeighings', 'search')}"></a>
                         <a th:replace="~{fragments/menuItem ::menuItem ('Add a Weighing', '/weighings/add', 'addWeighing', 'plus')}"></a>
+                        <a th:replace="~{fragments/menuItem ::menuItem ('All Meals', '/meals', 'allMeals', 'search')}"></a>
+                        <a th:replace="~{fragments/menuItem ::menuItem ('Add a Meal', '/meals/add', 'addMeal', 'plus')}"></a>
                         <a th:replace="~{fragments/menuItem ::menuItem ('Crash', '/crash', 'crash', 'warning-sign')}"></a>
                     </div>
                 </div>
