--- a/src/main/resources/templates/fragments/inputField.html
+++ b/src/main/resources/templates/fragments/inputField.html
@@ -8,13 +8,15 @@
                     <label th:text="${label}">Label</label>
                     <div>
                         <div th:switch="${type}">
-                            <input th:case="'text'" class="form-control" type="text" th:field="*{__${name}__}"/>
-                            <input th:case="'number'" class="form-control" type="number" step="0.1"
-                                   th:field="*{__${name}__}"/>
-                            <input th:case="'date'" class="form-control" type="date" th:field="*{__${name}__}" />
+                            <input th:case="'text'" class="form-control"
+                                   type="text" th:field="*{__${name}__}"/>
+                            <input th:case="'number'" class="form-control"
+                                   type="number" step="0.1" th:field="*{__${name}__}"/>
+                            <input th:case="'date'" class="form-control"
+                                   type="date" th:field="*{__${name}__}" />
                         </div>
                         <th:block th:if="${!valid}">
-                            <span class="glyphicon glyphicon-remove"
+                            <span class="glyphicon glyphicon-remove form-control-feedback"
                                   aria-hidden="true"></span>
                             <span class="help-inline" th:errors="*{__${name}__}">Error</span>
                         </th:block>
