--- a/src/main/resources/templates/products/addProduct.html
+++ b/src/main/resources/templates/products/addProduct.html
@@ -6,9 +6,9 @@
         <form th:object="${product}" class="form-horizontal" method="post">
             <div class="form-group has-feedback">
                 <input th:replace="~{fragments/inputField :: input ('Name', 'name', 'text')}"/>
-                <input th:replace="~{fragments/inputField :: input ('Protein', 'protein', 'number')}"/>
-                <input th:replace="~{fragments/inputField :: input ('Carbs', 'carbs', 'number')}"/>
-                <input th:replace="~{fragments/inputField :: input ('Fat', 'fat', 'number')}"/>
+                <input th:replace="~{fragments/inputField :: input ('Protein [per 100g]', 'protein', 'number')}"/>
+                <input th:replace="~{fragments/inputField :: input ('Carbs [per 100g]', 'carbs', 'number')}"/>
+                <input th:replace="~{fragments/inputField :: input ('Fat [per 100g]', 'fat', 'number')}"/>
             </div>
             <button th:with="text=${product['new']} ? 'Add a Product' : 'Update a Product'"
                     type="submit"
