--- a/src/main/resources/templates/products/allProducts.html
+++ b/src/main/resources/templates/products/allProducts.html
@@ -7,9 +7,9 @@
             <thead>
                 <tr>
                     <th>Name</th>
-                    <th>Protein</th>
-                    <th>Carbs</th>
-                    <th>Fat</th>
+                    <th>Protein [per 100g]</th>
+                    <th>Carbs [per 100g]</th>
+                    <th>Fat [per 100g]</th>
                 </tr>
             </thead>
             <tbody>
