--- a/src/main/resources/templates/meals/allMeals.html
+++ b/src/main/resources/templates/meals/allMeals.html
@@ -12,19 +12,19 @@
             <p><span th:text="${meal.name}">?</span></p>
             <p><span th:text="${meal.date}">?</span></p>
             <br>
-            <p>Total kcal - <span th:text="${meal.totalCalories}">?</span></p>
-            <p>Total gram - <span th:text="${meal.totalWeight}">?</span></p>
-            <p>Total protein - <span th:text="${meal.totalProtein}">?</span></p>
-            <p>Total carbs - <span th:text="${meal.totalCarbs}">?</span></p>
-            <p>Total fat - <span th:text="${meal.totalFat}">?</span></p>
+            <p>Total kcal - <span th:text="${meal.kcal}">?</span></p>
+            <p>Total gram - <span th:text="${meal.weight}">?</span></p>
+            <p>Total protein - <span th:text="${meal.protein}">?</span></p>
+            <p>Total carbs - <span th:text="${meal.carbs}">?</span></p>
+            <p>Total fat - <span th:text="${meal.fat}">?</span></p>
             <br>
             <div th:each="productWithWeight : ${meal.productsWithWeights}">
                     <p><span th:text="${productWithWeight.product.name}">?</span></p>
                     <p>gram <span th:text="${productWithWeight.weight}">?</span></p>
-                    <p>Protein <span th:text="${productWithWeight.product.protein}">?</span></p>
-                    <p>Carbs <span th:text="${productWithWeight.product.carbs}">?</span></p>
-                    <p>Fat <span th:text="${productWithWeight.product.fat}">?</span></p>
-                    <p>kcal - <span th:text="${productWithWeight.totalCalories}">?</span></p>
+                    <p>Protein <span th:text="${productWithWeight.protein}">?</span></p>
+                    <p>Carbs <span th:text="${productWithWeight.carbs}">?</span></p>
+                    <p>Fat <span th:text="${productWithWeight.fat}">?</span></p>
+                    <p>kcal - <span th:text="${productWithWeight.kcal}">?</span></p>
                     <br>
                 </div>
             <br>
